---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - Changed the status data tracking to be a moving window instead of it just accumulating forever
    - Added a setting to customize the length of this new moving window
    - Converted color settings to the new color-picker type
  Changes:
    -
  Bugfixes:
    - Fixed a couple of crashes due to API changes in 2.0

---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 19. 10. 2024
  Features:
    - Update for Factorio 2.0

---------------------------------------------------------------------------------------------------
Version: 1.1.13
Date: 21. 12. 2023
  Changes:
    - Changed away from using Phobos as the Lua compiler

---------------------------------------------------------------------------------------------------
Version: 1.1.12
Date: 03. 10. 2023
  Features:
    - Added '/aa-clear-zones' console command to remove all current zones
  Bugfixes:
    - Fixed a crash during migration when a selected entity became invalid

---------------------------------------------------------------------------------------------------
Version: 1.1.11
Date: 27. 10. 2021
  Changes:
    - Changed the mod to be compiled using the Phobos Lua compiler. This should not change anything at the surface, but will lead to potential performance improvements in the future. Consider it a test for now.

---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: 25. 08. 2021
  Features:
    - Added updated Russian localisation (Thanks Astorin!)

---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 24. 07. 2021
  Features:
    - Added Chinese localisation (Thanks Ph.X!)
