@@ -42,6 +42,7 @@ aa-mod-settings=The mod offers various settings to customize it to your needs. Y
 
 [controls]
 aa-select-zone=Select analysis zone
+aa-clear-zones=Clear all zones
 
 [shortcut-name]
 aa-select-zone=Select analysis zone
