@@ -5,6 +5,7 @@ Date: 00. 00. 0000
     - Changed the status data tracking to be a moving window instead of it just accumulating forever
     - Added a setting to customize the length of this new moving window
     - Converted color settings to the new color-picker type
+    - Added a keyboard shortcut to clear all zones (Control + Alt + C)
   Changes:
     -
   Bugfixes:
